style: fix dark mode (color of preference)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ body {
 
 /* Estilos para modo oscuro */
 html.dark body {
-  background-color: #121212;
+  background-color: #0a0a0a;
   color: white;
 }
 
